Add process env data

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-KEY_PUBLIC_EMAILJS = "user_IvABAggCj2YTAQioXSYf8";
+REACT_APP_SERVICE_ID = gmail_portfolio
+REACT_APP_TEMPLATE_ID = template_abswtrl
+REACT_APP_API_KEY = user_IvABAggCj2YTAQioXSYf8
