--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "portfolio_v2",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://christelle-legros.github.io/Portfolio",
   "dependencies": {
     "@emailjs/browser": "^3.6.2",
     "@testing-library/jest-dom": "^5.16.4",
@@ -21,7 +22,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
