Modif package.json for gh-pages

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "portfolio_v2",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://christelle-legros.github.io/Portfolio",
+  "homepage": "https://christelle-legros.github.io/Portfolio_v2",
   "dependencies": {
     "@emailjs/browser": "^3.6.2",
     "@testing-library/jest-dom": "^5.16.4",
@@ -26,12 +26,6 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -43,5 +37,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
   }
 }
