--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "portfolio_v2",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://christelle-legros.github.io/Portfolio_v2",
+  "homepage": "https://christelle-legros.github.io/Portfolio_V2",
   "dependencies": {
     "@emailjs/browser": "^3.6.2",
     "@testing-library/jest-dom": "^5.16.4",
