--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "emailjs": "^4.0.0",
     "react": "^18.2.0",
+    "react-coverflow": "^0.2.20",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.0.5",
